@@ -30,12 +30,13 @@ t/Tags-Output-Indent/09-put-preserve_from_attribute.t
 t/Tags-Output-Indent/10-put-preserve_from_constructor.t
 t/Tags-Output-Indent/11-put-tag.t
 t/Tags-Output-Indent/12-put-tags_combine.t
-t/Tags-Output-Indent/13-put-no_simple.t
-t/Tags-Output-Indent/14-put-raw.t
-t/Tags-Output-Indent/15-put-cdata.t
-t/Tags-Output-Indent/16-put-auto_flush.t
-t/Tags-Output-Indent/17-put-attributes.t
-t/Tags-Output-Indent/18-put-instruction.t
-t/Tags-Output-Indent/19-put-data_callback.t
+t/Tags-Output-Indent/13-put-no_data_callback.t
+t/Tags-Output-Indent/14-put-no_simple.t
+t/Tags-Output-Indent/15-put-raw.t
+t/Tags-Output-Indent/16-put-cdata.t
+t/Tags-Output-Indent/17-put-auto_flush.t
+t/Tags-Output-Indent/18-put-attributes.t
+t/Tags-Output-Indent/19-put-instruction.t
+t/Tags-Output-Indent/20-put-data_callback.t
 xt/Tags-Output-Indent/01-pod_coverage.t
 xt/Tags-Output-Indent/02-pod.t
