@@ -1,4 +1,6 @@
 0.08
+ - Add 'no_data_callback' parameter to set list of elements which not process
+   'data_callback'. Example is 'script' in which we don't need HTML escaping.
 
 0.07 2020-10-14T01:01:50+02:00
  - Add 'input_tags_item_callback' for processing before 'Tags' put().
